[package]
name = "heart7"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "heart7d"
path = "src/bin/server.rs"

[[bin]]
name = "heart7"
path = "src/bin/client.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
log = "0.4.19"
rand = "0.8.5"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = { version = "0.22.0", features = ["all-widgets"]}
tokio-util = "0.7.8"
futures = "0.3.28"
log4rs = "1.2.0"
tui-input = "0.8.0"
clap = { version = "4.3.24", features = ["derive"] }

[dependencies.uuid]
version = "1.4.1"
features = ["v4", "fast-rng", "macro-diagnostics"]

[build-dependencies]
tonic-build = "0.9"
