[package]
name = "heart7_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tonic = "0.12.3"
log = "0.4.19"
log4rs = "1.2.0"
tui-input = "0.8.0"
heart7_rule = { path = "../rule" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tonic-web-wasm-client = "0.6.0"
