[package]
name = "heart7_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tonic = { version = "0.12", default-features = false, features = [
    "prost",
    "codegen",
] }
heart7_rule = { path = "../rule" }
unicode-width = "0.1.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
log = "0.4.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tonic-web-wasm-client = "0.6.0"
gloo-console = "0.3.0"
