[package]
name = "heart7"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = "0.4.19"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = { version = "0.22.0", features = ["all-widgets"]}
tokio-util = "0.7.8"
futures = "0.3.28"
log4rs = "1.2.0"
tui-input = "0.8.0"
clap = { version = "4.3.24", features = ["derive"] }
anyhow = "1.0.89"
heart7_client = { path = "../client" }
