[package]
name = "heart7_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
        "console",
        "Window",
        "Document",
        "Element",
        "HtmlCanvasElement",
        "CanvasRenderingContext2d",
        "EventTarget",
        "HtmlButtonElement",
        "Event",
        "MessageChannel",
        "MessagePort",
] }
wee_alloc = "0.4.5"
prost = "0.13"
tonic = { version = "0.12", default-features = false, features = [
    "prost",
    "codegen",
] }
tonic-web-wasm-client = "0.6.0"
wasm-bindgen-futures = "0.4.43"
futures = "0.3.31"
gloo = "0.11.0"

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = [
    "prost",
] }
