[package]
name = "heart7_client_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
        "console",
        "Window",
        "Document",
        "Element",
        "HtmlCanvasElement",
        "CanvasRenderingContext2d",
        "EventTarget",
        "HtmlButtonElement",
        "Event",
        "MessageChannel",
        "MessagePort",
        "MouseEvent",
        "DomRect",
        "InputEvent",
        "TextMetrics",
        "HtmlImageElement",
] }
wee_alloc = "0.4.5"
prost = "0.13"
tonic = { version = "0.12", default-features = false, features = [
    "prost",
    "codegen",
] }
tonic-web-wasm-client = "0.6.0"
wasm-bindgen-futures = "0.4.43"
futures = "0.3.31"
tui-input = { version = "0.8.0", default-features = false}
gloo = "0.11.0"
heart7_client = { path = "../client" }
gloo-console = "0.3.0"
async-channel = "2.3.1"
console_error_panic_hook = "0.1.7"
