[package]
name = "heart7d"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
log = "0.4.19"
tokio-util = "0.7.8"
log4rs = "1.2.0"
clap = { version = "4.3.24", features = ["derive"] }
anyhow = "1.0.89"
tonic = "0.12.3"
tonic-web = "0.12.3"
heart7_rule = { path = "../rule" }
